# spaghetti-bench

./: .gitignore  README.md  flake.nix  pyproject.toml  result  run_agent.sh
benchmarks/SCTBench/cb/: StringBufferJDK.java
benchmarks/SCTBench/chess/: WorkStealQueue.java
benchmarks/SCTBench/cs/hard/: Reorder100Bad.java  Reorder50Bad.java
benchmarks/SCTBench/cs/origin/: AccountBad.java  ArithmeticProgBad.java  BluetoothDriverBad.java  Carter01Bad.java  CircularBufferBad.java  Deadlock01Bad.java  FsbenchBad.java  Lazy01Bad.java  Phase01Bad.java  QueueBad.java  Reorder10Bad.java  Reorder20Bad.java  (+12 more)
benchmarks/patches/: kafka.patch  lucene.patch
docs/: README.md  blog.html  index.html  leaderboard.html  leaderboard_data.json  traces.html
helpers/junit-runner/: build.gradle.kts  settings.gradle.kts
scripts/: aggregate_results.py  check_coverage.py  fix_sctbench_patches.py
src/concurrency_bench/: all.jsonl  example.jsonl  guava.jsonl  kafka.jsonl  lucene.jsonl  mercury.jsonl  run_agent.py  sctbench.jsonl  task_config.py  uniffle.jsonl
src/concurrency_bench/agents/: __init__.py  base.py  builtin_agents.py  fix_bug_agent.py  noop_agent.py  trigger_bug_agent.py
src/concurrency_bench/tasks/: fix_bug.py  task.py  trigger_bug.py
src/concurrency_bench/tools/: __init__.py  fray_tools.py
src/unhandled_exception_reporter/: MANIFEST.MF  UnhandledExceptionReporterAgent.java  build.sh
viz/: '  README.md  \  aggregate_results.py  blog.html  check_coverage.py  index.html  leaderboard.html  leaderboard_data.json  serve_traces.py  trace_visualizer.html  traces.html
(+21 files in other folders)
